// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Group should match snapshot 1`] = `<AlertGroupInline />`;

exports[`Standard Alert Group is not a toast alert group 1`] = `
<AlertGroup>
  <AlertGroupInline>
    <ul
      className="pf-c-alert-group"
    >
      <li
        key="0"
      >
        <Alert
          key=".0"
          title="alert title"
          variant="danger"
        >
          <div
            aria-label="Danger Alert"
            className="pf-c-alert pf-m-danger"
            data-ouia-component-id={0}
            data-ouia-component-type="PF4/Alert"
            data-ouia-safe={true}
          >
            <AlertIcon
              variant="danger"
            >
              <div
                className="pf-c-alert__icon"
              >
                <ExclamationCircleIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      transform=""
                    />
                  </svg>
                </ExclamationCircleIcon>
              </div>
            </AlertIcon>
            <h4
              className="pf-c-alert__title"
            >
              <span
                className="pf-u-screen-reader"
              >
                Danger alert:
              </span>
              alert title
            </h4>
          </div>
        </Alert>
      </li>
    </ul>
  </AlertGroupInline>
</AlertGroup>
`;

exports[`Toast Alert Group contains expected modifier class 1`] = `
<AlertGroup
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      isToast={true}
    >
      <ul
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            key=".0"
            title="alert title"
            variant="warning"
          >
            <div
              aria-label="Warning Alert"
              className="pf-c-alert pf-m-warning"
              data-ouia-component-id={1}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
            >
              <AlertIcon
                variant="warning"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <ExclamationTriangleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        transform=""
                      />
                    </svg>
                  </ExclamationTriangleIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;

exports[`alertgroup closes when alerts are closed 1`] = `
<AlertGroup
  appendTo={
    <body>
      <div />
      <div />
      <div />
      <div />
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
      <div />
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 64 896 1024"
                  width="1em"
                >
                  <path
                    d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    </body>
  }
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 64 896 1024"
                  width="1em"
                >
                  <path
                    d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      isToast={true}
    >
      <ul
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            actionClose={
              <AlertActionCloseButton
                aria-label="Close"
                onClose={[MockFunction]}
              />
            }
            isLiveRegion={true}
            key=".0"
            title="Test Alert"
          >
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              className="pf-c-alert"
              data-ouia-component-id={2}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
            >
              <AlertIcon
                variant="default"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <BellIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 64 896 1024"
                      width="1em"
                    >
                      <path
                        d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
                        transform="rotate(180 0 512) scale(-1 1)"
                      />
                    </svg>
                  </BellIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <AlertActionCloseButton
                  aria-label="Close"
                  onClose={[MockFunction]}
                >
                  <Button
                    aria-label="Close"
                    onClick={[MockFunction]}
                    variant="plain"
                  >
                    <button
                      aria-disabled={false}
                      aria-label="Close"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id={3}
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[MockFunction]}
                      type="button"
                    >
                      <TimesIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            transform=""
                          />
                        </svg>
                      </TimesIcon>
                    </button>
                  </Button>
                </AlertActionCloseButton>
              </div>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;
